[metadata]
name = Philly Bike Router
summary = Find a place to park your bike
description-file =
    README.md
author = Sean M. Collins
author-email = sean@coreitpro.com
home-page = http://coreitpro.com
classifier =
    Intended Audience :: Philadelphians
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
